added pyxivapi to readme

--- a/IPYNB NoteBooks/DataCollection.ipynb
+++ b/IPYNB NoteBooks/DataCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,7 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "# Setting the working directory\n",
-    "os.chdir('/home/andres/Documents/FFXIV')\n",
-    "\n",
+    "# Universalis API no key required\n",
     "# Setting the API Key for XIVAPI from the environment variable XIVAPI_KEY\n",
     "xivapi_key = os.environ.get('XIVAPI_KEY')\n",
     "\n",
@@ -37,6 +35,30 @@
     "xivapi_url = 'https://xivapi.com/'\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(xivapi_key)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -46,7 +68,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
