successfully collected at least 1 years worth of market data per item

--- a/IPYNB NoteBooks/DataCollection.ipynb
+++ b/IPYNB NoteBooks/DataCollection.ipynb
@@ -2421,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2430,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2456,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -10670,7 +10670,7 @@
        " 'hqSaleVelocity': 0}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10682,7 +10682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -10784,7 +10784,7 @@
        "[1 rows x 205 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10797,7 +10797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -10988,7 +10988,7 @@
        "[32603 rows x 8 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11001,7 +11001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -11192,7 +11192,7 @@
        "[32603 rows x 8 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11201,6 +11201,301 @@
     "# convert the timestamp to a datetime\n",
     "entries['timestamp'] = pd.to_datetime(entries['timestamp'], unit='s')\n",
     "entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Icon</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Url</th>\n",
+       "      <th>UrlType</th>\n",
+       "      <th>_</th>\n",
+       "      <th>_Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4551</td>\n",
+       "      <td>/i/020000/020601.png</td>\n",
+       "      <td>Potion</td>\n",
+       "      <td>/Item/4551</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4552</td>\n",
+       "      <td>/i/020000/020602.png</td>\n",
+       "      <td>Hi-Potion</td>\n",
+       "      <td>/Item/4552</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4553</td>\n",
+       "      <td>/i/020000/020603.png</td>\n",
+       "      <td>Mega-Potion</td>\n",
+       "      <td>/Item/4553</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4554</td>\n",
+       "      <td>/i/020000/020603.png</td>\n",
+       "      <td>X-Potion</td>\n",
+       "      <td>/Item/4554</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4555</td>\n",
+       "      <td>/i/020000/020621.png</td>\n",
+       "      <td>Ether</td>\n",
+       "      <td>/Item/4555</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2316</th>\n",
+       "      <td>41408</td>\n",
+       "      <td>/i/028000/028116.png</td>\n",
+       "      <td>Gharlichthys</td>\n",
+       "      <td>/Item/41408</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2317</th>\n",
+       "      <td>41409</td>\n",
+       "      <td>/i/028000/028562.png</td>\n",
+       "      <td>Snowy Parexus</td>\n",
+       "      <td>/Item/41409</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2318</th>\n",
+       "      <td>41410</td>\n",
+       "      <td>/i/028000/028564.png</td>\n",
+       "      <td>Furcacauda</td>\n",
+       "      <td>/Item/41410</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2319</th>\n",
+       "      <td>41411</td>\n",
+       "      <td>/i/029000/029780.png</td>\n",
+       "      <td>Lopoceras Elegans</td>\n",
+       "      <td>/Item/41411</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2320</th>\n",
+       "      <td>41412</td>\n",
+       "      <td>/i/028000/028969.png</td>\n",
+       "      <td>Sidereal Whale</td>\n",
+       "      <td>/Item/41412</td>\n",
+       "      <td>Item</td>\n",
+       "      <td>item</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2321 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ID                  Icon               Name          Url UrlType  \\\n",
+       "0      4551  /i/020000/020601.png             Potion   /Item/4551    Item   \n",
+       "1      4552  /i/020000/020602.png          Hi-Potion   /Item/4552    Item   \n",
+       "2      4553  /i/020000/020603.png        Mega-Potion   /Item/4553    Item   \n",
+       "3      4554  /i/020000/020603.png           X-Potion   /Item/4554    Item   \n",
+       "4      4555  /i/020000/020621.png              Ether   /Item/4555    Item   \n",
+       "...     ...                   ...                ...          ...     ...   \n",
+       "2316  41408  /i/028000/028116.png       Gharlichthys  /Item/41408    Item   \n",
+       "2317  41409  /i/028000/028562.png      Snowy Parexus  /Item/41409    Item   \n",
+       "2318  41410  /i/028000/028564.png         Furcacauda  /Item/41410    Item   \n",
+       "2319  41411  /i/029000/029780.png  Lopoceras Elegans  /Item/41411    Item   \n",
+       "2320  41412  /i/028000/028969.png     Sidereal Whale  /Item/41412    Item   \n",
+       "\n",
+       "         _  _Score  \n",
+       "0     item       0  \n",
+       "1     item       0  \n",
+       "2     item       0  \n",
+       "3     item       0  \n",
+       "4     item       0  \n",
+       "...    ...     ...  \n",
+       "2316  item       0  \n",
+       "2317  item       0  \n",
+       "2318  item       0  \n",
+       "2319  item       0  \n",
+       "2320  item       0  \n",
+       "\n",
+       "[2321 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marketable_consumables_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request failed for 4587\n",
+      "Request failed for 4603\n",
+      "Request failed for 7571\n",
+      "Request failed for 21301\n",
+      "Request failed for 36064\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now to get the data for all the marketable consumables\n",
+    "# Initialize an empty df to store all results\n",
+    "all_results = pd.DataFrame()\n",
+    "\n",
+    "# Initialize the world to Aether\n",
+    "# Initialize the histInSeconds to 1 years\n",
+    "\n",
+    "world = \"Aether\"\n",
+    "years = 1\n",
+    "histInSeconds = years*365*24*60*60 # year in seconds\n",
+    "\n",
+    "# Loop through all the marketable consumables\n",
+    "# Each request will be for a single consumable\n",
+    "# We have 2321 marketable consumables and we have to limit the requests to 25 per second\n",
+    "# We will use a sleep timer to limit the requests to 25 per second\n",
+    "failed_requests = []\n",
+    "\n",
+    "for index, row in marketable_consumables_df.iterrows():\n",
+    "    # Make the request\n",
+    "    itemID = row['ID']\n",
+    "    response = requests.get(f'https://universalis.app/api/v2/history/{world}/{itemID}?entriesToReturn=999999&entriesWithin={histInSeconds}&minSalePrice=0&maxSalePrice=2147483647')\n",
+    "    # check if the request was successful\n",
+    "    if response.status_code != 200:\n",
+    "        print(f\"Request failed for {itemID}\")\n",
+    "        # store the itemID in a list to retry later\n",
+    "        failed_requests.append(itemID)\n",
+    "        continue\n",
+    "    response = response.json()\n",
+    "    # normalize the data\n",
+    "    response = pd.json_normalize(response)\n",
+    "    # concatenate the data to the all_results df\n",
+    "    all_results = pd.concat([all_results, response,], ignore_index=True)\n",
+    "    time.sleep(0.04)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#retry the failed requests\n",
+    "for itemID in failed_requests:\n",
+    "    response = requests.get(f'https://universalis.app/api/v2/history/{world}/{itemID}?entriesToReturn=999999&entriesWithin={histInSeconds}&minSalePrice=0&maxSalePrice=2147483647')\n",
+    "    # check if the request was successful\n",
+    "    if response.status_code != 200:\n",
+    "        print(f\"Request failed for {itemID}\")\n",
+    "        continue\n",
+    "    response = response.json()\n",
+    "    # normalize the data\n",
+    "    response = pd.json_normalize(response)\n",
+    "    # concatenate the data to the all_results df\n",
+    "    all_results = pd.concat([all_results, response,], ignore_index=True)\n",
+    "    time.sleep(0.04)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the data to a csv file\n",
+    "all_results.to_csv('..\\\\data\\\\all_results_1_year.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2321, 304)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#how many items were successfully collected\n",
+    "all_results.shape"
    ]
   },
   {
