edited comments for clarity

--- a/IPYNB NoteBooks/DataCollection.ipynb
+++ b/IPYNB NoteBooks/DataCollection.ipynb
@@ -2441,11 +2441,11 @@
     "# https://universalis.app/api/v2/history/{WorldID}/{itemIDs}?entriesToReturn=999999&minSalePrice=0&maxSalePrice=2147483647\n",
     "\n",
     "# Test a single request to the Universalis API\n",
-    "# The World ID for the Aether Data Center is 101\n",
+    "# The API accepts strings as inputs for either Worlds of Data centers\n",
     "# The item ID for the Grade 8 Tincture of Vitality is 39729\n",
     "\n",
     "# Make the request\n",
-    "world = \"Aether\"\n",
+    "world = \"Aether\" # data center made up of 8 worlds\n",
     "itemID = 27759\n",
     "histInSeconds = 4*365*24*60*60 # 4 year in seconds\n",
     "\n",
@@ -11415,7 +11415,7 @@
     "# Initialize an empty df to store all results\n",
     "all_results = pd.DataFrame()\n",
     "\n",
-    "# Initialize the world to Aether\n",
+    "# Initialize the Data center to Aether\n",
     "# Initialize the histInSeconds to 1 years\n",
     "\n",
     "world = \"Aether\"\n",
