--- a/IPYNB NoteBooks/NarrowCollection.ipynb
+++ b/IPYNB NoteBooks/NarrowCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4    Item  item       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -241,9 +241,9 @@
        "      <td>1710956243472</td>\n",
        "      <td>[{'hq': True, 'pricePerUnit': 2700, 'quantity'...</td>\n",
        "      <td>Aether</td>\n",
-       "      <td>32285.143000</td>\n",
+       "      <td>32271.000000</td>\n",
        "      <td>78.142860</td>\n",
-       "      <td>32207.000000</td>\n",
+       "      <td>32192.857000</td>\n",
        "      <td>201</td>\n",
        "      <td>135</td>\n",
        "      <td>1717</td>\n",
@@ -262,12 +262,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>39728</td>\n",
-       "      <td>1710956271602</td>\n",
-       "      <td>[{'hq': True, 'pricePerUnit': 2863, 'quantity'...</td>\n",
+       "      <td>1710956464436</td>\n",
+       "      <td>[{'hq': True, 'pricePerUnit': 2862, 'quantity'...</td>\n",
        "      <td>Aether</td>\n",
-       "      <td>13213.286000</td>\n",
+       "      <td>13222.714000</td>\n",
        "      <td>20.571428</td>\n",
-       "      <td>13192.714000</td>\n",
+       "      <td>13202.143000</td>\n",
        "      <td>101</td>\n",
        "      <td>94</td>\n",
        "      <td>919</td>\n",
@@ -363,14 +363,14 @@
       "text/plain": [
        "   itemID  lastUploadTime                                            entries  \\\n",
        "0   39727   1710956243472  [{'hq': True, 'pricePerUnit': 2700, 'quantity'...   \n",
-       "1   39728   1710956271602  [{'hq': True, 'pricePerUnit': 2863, 'quantity'...   \n",
+       "1   39728   1710956464436  [{'hq': True, 'pricePerUnit': 2862, 'quantity'...   \n",
        "2   39729   1710951391617  [{'hq': True, 'pricePerUnit': 2974, 'quantity'...   \n",
        "3   39730   1710956305589  [{'hq': True, 'pricePerUnit': 2823, 'quantity'...   \n",
        "4   39731   1710956329840  [{'hq': True, 'pricePerUnit': 2837, 'quantity'...   \n",
        "\n",
        "   dcName  regularSaleVelocity  nqSaleVelocity  hqSaleVelocity  \\\n",
-       "0  Aether         32285.143000       78.142860    32207.000000   \n",
-       "1  Aether         13213.286000       20.571428    13192.714000   \n",
+       "0  Aether         32271.000000       78.142860    32192.857000   \n",
+       "1  Aether         13222.714000       20.571428    13202.143000   \n",
        "2  Aether            24.714285        0.000000       24.714285   \n",
        "3  Aether         10675.857000       48.714287    10627.143000   \n",
        "4  Aether         13636.714000       21.571428    13615.143000   \n",
@@ -413,7 +413,7 @@
        "[5 rows x 295 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -478,9 +478,9 @@
        "      <td>1710956243472</td>\n",
        "      <td>[{'hq': True, 'pricePerUnit': 2700, 'quantity'...</td>\n",
        "      <td>Aether</td>\n",
-       "      <td>32285.143000</td>\n",
+       "      <td>32271.000000</td>\n",
        "      <td>78.142860</td>\n",
-       "      <td>32207.000000</td>\n",
+       "      <td>32192.857000</td>\n",
        "      <td>201</td>\n",
        "      <td>135</td>\n",
        "      <td>1717</td>\n",
@@ -499,12 +499,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>39728</td>\n",
-       "      <td>1710956271602</td>\n",
-       "      <td>[{'hq': True, 'pricePerUnit': 2863, 'quantity'...</td>\n",
+       "      <td>1710956464436</td>\n",
+       "      <td>[{'hq': True, 'pricePerUnit': 2862, 'quantity'...</td>\n",
        "      <td>Aether</td>\n",
-       "      <td>13213.286000</td>\n",
+       "      <td>13222.714000</td>\n",
        "      <td>20.571428</td>\n",
-       "      <td>13192.714000</td>\n",
+       "      <td>13202.143000</td>\n",
        "      <td>101</td>\n",
        "      <td>94</td>\n",
        "      <td>919</td>\n",
@@ -600,14 +600,14 @@
       "text/plain": [
        "   itemID  lastUploadTime                                            entries  \\\n",
        "0   39727   1710956243472  [{'hq': True, 'pricePerUnit': 2700, 'quantity'...   \n",
-       "1   39728   1710956271602  [{'hq': True, 'pricePerUnit': 2863, 'quantity'...   \n",
+       "1   39728   1710956464436  [{'hq': True, 'pricePerUnit': 2862, 'quantity'...   \n",
        "2   39729   1710951391617  [{'hq': True, 'pricePerUnit': 2974, 'quantity'...   \n",
        "3   39730   1710956305589  [{'hq': True, 'pricePerUnit': 2823, 'quantity'...   \n",
        "4   39731   1710956329840  [{'hq': True, 'pricePerUnit': 2837, 'quantity'...   \n",
        "\n",
        "   dcName  regularSaleVelocity  nqSaleVelocity  hqSaleVelocity  \\\n",
-       "0  Aether         32285.143000       78.142860    32207.000000   \n",
-       "1  Aether         13213.286000       20.571428    13192.714000   \n",
+       "0  Aether         32271.000000       78.142860    32192.857000   \n",
+       "1  Aether         13222.714000       20.571428    13202.143000   \n",
        "2  Aether            24.714285        0.000000       24.714285   \n",
        "3  Aether         10675.857000       48.714287    10627.143000   \n",
        "4  Aether         13636.714000       21.571428    13615.143000   \n",
@@ -643,7 +643,7 @@
        "[5 rows x 301 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "[173286 rows x 10 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
        "[795 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1191,6 +1191,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>True</td>\n",
+       "      <td>2862</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Dark Phenex</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:40:40</td>\n",
+       "      <td>Adamantoise</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Grade 8 Tincture of Dexterity</td>\n",
+       "      <td>39728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>2862</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Dark Phenex</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2024-03-20 17:40:37</td>\n",
+       "      <td>Adamantoise</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Grade 8 Tincture of Dexterity</td>\n",
+       "      <td>39728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
        "      <td>2863</td>\n",
        "      <td>51</td>\n",
        "      <td>Lune Cr'est</td>\n",
@@ -1202,7 +1228,7 @@
        "      <td>39728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>True</td>\n",
        "      <td>2500</td>\n",
        "      <td>33</td>\n",
@@ -1215,7 +1241,7 @@
        "      <td>39728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>True</td>\n",
        "      <td>2961</td>\n",
        "      <td>99</td>\n",
@@ -1224,32 +1250,6 @@
        "      <td>2024-03-20 15:53:35</td>\n",
        "      <td>Siren</td>\n",
        "      <td>57</td>\n",
-       "      <td>Grade 8 Tincture of Dexterity</td>\n",
-       "      <td>39728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>99</td>\n",
-       "      <td>Reina Kata</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-03-20 15:15:45</td>\n",
-       "      <td>Gilgamesh</td>\n",
-       "      <td>63</td>\n",
-       "      <td>Grade 8 Tincture of Dexterity</td>\n",
-       "      <td>39728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>True</td>\n",
-       "      <td>2984</td>\n",
-       "      <td>99</td>\n",
-       "      <td>Arturo Brikoa</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-03-20 14:58:57</td>\n",
-       "      <td>Faerie</td>\n",
-       "      <td>54</td>\n",
        "      <td>Grade 8 Tincture of Dexterity</td>\n",
        "      <td>39728</td>\n",
        "    </tr>\n",
@@ -1267,7 +1267,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76156</th>\n",
+       "      <th>76158</th>\n",
        "      <td>True</td>\n",
        "      <td>14998</td>\n",
        "      <td>33</td>\n",
@@ -1280,7 +1280,7 @@
        "      <td>39728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76157</th>\n",
+       "      <th>76159</th>\n",
        "      <td>True</td>\n",
        "      <td>14998</td>\n",
        "      <td>45</td>\n",
@@ -1293,7 +1293,7 @@
        "      <td>39728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76158</th>\n",
+       "      <th>76160</th>\n",
        "      <td>True</td>\n",
        "      <td>15000</td>\n",
        "      <td>30</td>\n",
@@ -1306,7 +1306,7 @@
        "      <td>39728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76159</th>\n",
+       "      <th>76161</th>\n",
        "      <td>True</td>\n",
        "      <td>15000</td>\n",
        "      <td>30</td>\n",
@@ -1319,7 +1319,7 @@
        "      <td>39728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76160</th>\n",
+       "      <th>76162</th>\n",
        "      <td>False</td>\n",
        "      <td>5000</td>\n",
        "      <td>24</td>\n",
@@ -1333,35 +1333,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>76161 rows × 10 columns</p>\n",
+       "<p>76163 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          hq  pricePerUnit  quantity         buyerName  onMannequin  \\\n",
-       "0       True          2863        51       Lune Cr'est        False   \n",
-       "1       True          2500        33       Dong Senpai        False   \n",
-       "2       True          2961        99     Shadow Erebus        False   \n",
-       "3       True          2500        99        Reina Kata        False   \n",
-       "4       True          2984        99     Arturo Brikoa        False   \n",
+       "0       True          2862        33       Dark Phenex        False   \n",
+       "1       True          2862        33       Dark Phenex        False   \n",
+       "2       True          2863        51       Lune Cr'est        False   \n",
+       "3       True          2500        33       Dong Senpai        False   \n",
+       "4       True          2961        99     Shadow Erebus        False   \n",
        "...      ...           ...       ...               ...          ...   \n",
-       "76156   True         14998        33  Shiro Greybourne        False   \n",
-       "76157   True         14998        45  Shiro Greybourne        False   \n",
-       "76158   True         15000        30        Cipher Mss        False   \n",
-       "76159   True         15000        30        Cipher Mss        False   \n",
-       "76160  False          5000        24        Cipher Mss        False   \n",
+       "76158   True         14998        33  Shiro Greybourne        False   \n",
+       "76159   True         14998        45  Shiro Greybourne        False   \n",
+       "76160   True         15000        30        Cipher Mss        False   \n",
+       "76161   True         15000        30        Cipher Mss        False   \n",
+       "76162  False          5000        24        Cipher Mss        False   \n",
        "\n",
        "                timestamp    worldName  worldID  \\\n",
-       "0     2024-03-20 16:39:34  Adamantoise       73   \n",
-       "1     2024-03-20 16:09:17    Gilgamesh       63   \n",
-       "2     2024-03-20 15:53:35        Siren       57   \n",
-       "3     2024-03-20 15:15:45    Gilgamesh       63   \n",
-       "4     2024-03-20 14:58:57       Faerie       54   \n",
+       "0     2024-03-20 17:40:40  Adamantoise       73   \n",
+       "1     2024-03-20 17:40:37  Adamantoise       73   \n",
+       "2     2024-03-20 16:39:34  Adamantoise       73   \n",
+       "3     2024-03-20 16:09:17    Gilgamesh       63   \n",
+       "4     2024-03-20 15:53:35        Siren       57   \n",
        "...                   ...          ...      ...   \n",
-       "76156 2023-05-23 14:57:09       Jenova       40   \n",
-       "76157 2023-05-23 14:57:08       Jenova       40   \n",
-       "76158 2023-05-23 13:06:54       Jenova       40   \n",
-       "76159 2023-05-23 13:06:52       Jenova       40   \n",
-       "76160 2023-05-23 13:06:12       Jenova       40   \n",
+       "76158 2023-05-23 14:57:09       Jenova       40   \n",
+       "76159 2023-05-23 14:57:08       Jenova       40   \n",
+       "76160 2023-05-23 13:06:54       Jenova       40   \n",
+       "76161 2023-05-23 13:06:52       Jenova       40   \n",
+       "76162 2023-05-23 13:06:12       Jenova       40   \n",
        "\n",
        "                                Name  itemID  \n",
        "0      Grade 8 Tincture of Dexterity   39728  \n",
@@ -1370,16 +1370,16 @@
        "3      Grade 8 Tincture of Dexterity   39728  \n",
        "4      Grade 8 Tincture of Dexterity   39728  \n",
        "...                              ...     ...  \n",
-       "76156  Grade 8 Tincture of Dexterity   39728  \n",
-       "76157  Grade 8 Tincture of Dexterity   39728  \n",
        "76158  Grade 8 Tincture of Dexterity   39728  \n",
        "76159  Grade 8 Tincture of Dexterity   39728  \n",
        "76160  Grade 8 Tincture of Dexterity   39728  \n",
+       "76161  Grade 8 Tincture of Dexterity   39728  \n",
+       "76162  Grade 8 Tincture of Dexterity   39728  \n",
        "\n",
-       "[76161 rows x 10 columns]"
+       "[76163 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1626,7 @@
        "[66000 rows x 10 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1873,7 @@
        "[74008 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
        "4    Item  item       0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
